Add initial cv websites files

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="my picture-modified.png" alt="Nitya's profile picture"></td>
+      <td><img src="images\my picture-modified.png" alt="Nitya's profile picture"></td>
       <td>
         <h1>Nitya Elsa James</h1>
         <p><em><strong>A Keen Learner</strong> </em></p>
