Add initial cv website files

--- a/contact-me.html
+++ b/contact-me.html
@@ -10,9 +10,9 @@
 <body>
   <h3>My Contact Details</h3>
   <ol type="i">
-    <li><strong>Address:-</strong> 20/600 Dakshinpuri DDA Flat New Delhi 110062</li>
+    <li><strong>Address:-</strong> Dakshinpuri DDA Flat New Delhi 110062</li>
     <li><strong>Email:-</strong><a href="https://mail.google.com/mail/u/1/#inbox?compose=CllgCJZZzpSDMrmdvKcMxdxRskDHMrgWtPrvJfXkZpjNsHnrbKMZFshBpZcmSQFglFSMMRwsbVB">nityaelsajames@gmail.com</a></li>
-    <li><strong>Mobile No.:-</strong> 9910846889</li>
+    <li><strong>Mobile No.:-</strong> 99........</li>
     <li><strong>Instagram Id:-</strong> nitzz_188</li>
     <li><strong>Snapchat Id:-</strong> nitya_1808</li>
     <li><strong>Facebook Id:-</strong> Nitya Elsa James</li>
