Add initial cv website files

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td><img src="images/my picture-modified.png" alt="Nitya's profile picture"></td>
       <td>
         <h1>Nitya Elsa James</h1>
-        <p><em><strong>A Keen Learner</strong> </em></p>
+        <p><em><strong>Born on 18th August</strong> </em></p>
         <p>A Undergraduate Student from <a href="http://www.du.ac.in/">Delhi University</a></p>
       </td>
     </tr>
@@ -25,7 +25,7 @@
     <li>I done my schooling from <a href="http://www.ladyirwinschool.org/">Lady Irwin School</a> </li>
     <li>Recently I completed my under graduation from <a href="https://www.jmc.ac.in/"> Jesus and Mary College</a></li>
     <li>Now I am planning to do <a href="https://en.wikipedia.org/wiki/Master_of_Business_Administration">MBA</a> from <a href="http://www.ignou.ac.in/"> IGNOU</a> </li>
-    <li>Along with that, I am doing my <a href="https://www.udemy.com/courses/development/web-development/">Web Development Course</a> to boost up my skills from <a
+    <li>Along with that, I am doing a <a href="https://www.udemy.com/courses/development/web-development/">Web Development Course</a> to boost up my skills from <a
         href="https://www.udemy.com/?utm_source=adwords-brand&utm_medium=udemyads&utm_campaign=Brand-Udemy_la.EN_cc.ROW&utm_term=_._ag_80315195513_._ad_535757779892_._de_c_._dm__._pl__._ti_kwd-302329806175_._li_9300870_._pd__._&utm_term=_._pd__._kw_udemy%20login_._&matchtype=e&gclid=CjwKCAjwlqOXBhBqEiwA-hhitH1BuY5DAdXYHlsguUfQyv8_kppaahGLPepbsDhsLV9OfISn8DxVgRoCjLoQAvD_BwE">Udemy</a>
     </li>
   </ul>
@@ -72,9 +72,7 @@
   <hr>
   <a href="hobbies.html">My Hobbies</a><br>
   <a href="contact-me.html">Contact Me</a><br>
-  <hr>
-
-  I am a hard working, diciplined, dedicated, helping and an introvert person. <br>
+  
 
 </body>
 
